[package]
name = "avulto"
version = "0.0.26"
edition = "2021"
authors = ["Warriorstar Orion <orion@snowfrost.garden>"]
rust-version = "1.79.0"

[lib]
name = "avulto"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version = "0.22.4", features = ["py-clone"]}
itertools = "0.11.0"
lodepng = "3.7.0"
ndarray = "0.15.6"
dmi = "0.3.4"
image = "0.25.2"
regex = "1.10.3"
lazy_static = "1.4"

[dependencies.dreammaker]
git = "https://github.com/SpaceManiac/SpacemanDMM"
tag = "suite-1.8"
package = "dreammaker"

[dependencies.dmm_tools]
git = "https://github.com/SpaceManiac/SpacemanDMM"
tag = "suite-1.8"
package = "dmm-tools"
