[package]
name = "avulto"
version = "0.1.0"
edition = "2021"
authors = ["Warriorstar Orion <orion@snowfrost.garden>"]
rust-version = "1.79.0"

[lib]
name = "avulto"
crate-type = ["cdylib"]

[dependencies]
itertools = "0.11.0"
lodepng = "3.7.0"
ndarray = "0.15.6"
dmi = "0.3.4"
image = "0.25.2"
regex = "1.10.3"
lazy_static = "1.4"

[dependencies.pyo3]
git = "https://github.com/PyO3/pyo3"
rev = "be4407cde9a8739f7c1ea4875a0287c08fb90220"

[dependencies.dreammaker]
git = "https://github.com/SpaceManiac/SpacemanDMM"
tag = "suite-1.8"
package = "dreammaker"

[dependencies.dmm_tools]
git = "https://github.com/SpaceManiac/SpacemanDMM"
tag = "suite-1.8"
package = "dmm-tools"
